--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
-    font-family: "Roboto", sans-serif;
-    margin: 0;
-    background: #f4f4f4;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.6;
+  margin: 0;
+  background: #f4f4f4;
 }
 
 .container {
@@ -63,6 +64,8 @@ body {
 
 .contact-education .contact li {
     margin-bottom: 8px;
+    line-height: 2.2;
+    letter-spacing: 0.2px;
 }
 
 .contact-education h2 {
